# guts_ransomware_simulation

./: Cargo.toml  README.md
src/: main.rs
